@@ -1,10 +1,15 @@
 #!/bin/sh
-# $Id: run_test.sh,v 9.2 1991/10/18 16:12:36 dickey Exp $
+# $Id: run_test.sh,v 10.0 1991/10/22 12:21:11 ste_cm Rel $
 #
 # Perform regression tests for unix directory editor.  If we find any problems,
 # show it in the log.
 #
-date
+TTY=/dev/tty
+if ( date >>$TTY )
+then	echo >/dev/null
+else	echo '?? cannot run this script in batch-mode'
+	exit 1
+fi
 #
 # run from test-versions:
 PATH=:`pwd`:`cd ../bin;pwd`:`cd ../../../bin;pwd`:/bin:/usr/bin:/usr/ucb
@@ -14,13 +19,15 @@ umask 022
 rm -f ../src/*.out
 chmod 755 ../bin/ded
 #
+trap "rm -f /tmp/.ftree" 0
+#
 for i in *.cmd
 do
 	F=`basename $i .cmd`
 	echo '** running '$F
 	rm -f $F.tmp $F.out $F.dif
 	rm -f /tmp/.ftree
-	ded -t/tmp -c$F.cmd -l$F.out >>/dev/tty
+	ded -t/tmp -c$F.cmd -l$F.out >>$TTY
 	edit_test.sh $F.out
 	diff $F.cmd $F.tmp >$F.dif
 	if [ -s $F.dif ]
@@ -30,4 +37,3 @@ do
 	fi
 	rm -f $F.tmp $F.out $F.dif
 done
-rm -f /tmp/.ftree
